Use min height instead of height to prevent probelms on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Outfit', sans-serif;
-    height: 100vh;
+    min-height: 100vh;
     justify-content: center;
     margin: 0;
     text-align: center;
